# IoT_Edge_SW

./: AzureIoTHubClient.cpp  CMakeLists.txt  README.md
Data/: Input.json
